2012-10-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-poppler-flags.m4 [WIN32]: Add '-lgdi32' to POPPLER_LIBS.
	* kpse-xpdf-flags.m4 [WIN32]: Add '-lgdi32' to XPDF_LIBS.

2012-10-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_libs_pkgs): Remove obsdcompat.
	* kpse-obsdcompat-flags.m4: Removed.

2012-07-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-common.m4 (KPSE_COMMON): Check for 64-bit integer types
	and bail out if unsupported.
	Some headers are already checked by AC_HEADER_STDC.

2012-07-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (KPSE_UTILS_PKGS): Moved chktex from here ...
	(KPSE_TEXK_PKGS): ... to here (now using kpathsea).

2012-07-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (KPSE_UTILS_PKGS): Rename mtx => m-tx.

2012-04-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-common.m4 (_KPSE_LIB_FLAGS_TL): Replace sed substitutions
	in configure by m4_bpatsubst() at autoconf time.

2012-04-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-obsdcompat-flags.m4: Correct SRC/BLD dependencies.

2012-03-11  Karl Berry  <karl@tug.org>

	* kpse-xpdf-flags.m4 (KPSE_XPDF_OPTIONS): tweak help text slightly.

2012-02-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-warnings.m4: Drop `-Wimplicit' for g++ >= 4.6.

2012-01-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-setup.m4 (KPSE_SETUP): Normalize `enable_largefile'.

2012-01-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-poppler-flags.m4: Drop `-DPDF_PARSER_ONLY'.

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-web2c.m4: Modify msgs when setting enable_*TeX_synctex.

2011-08-26  Karl Berry  <karl@tug.org>

	* kpse-pkgs.m4 (KPSE_UTILS_PKGS): rm dialog.
	See comments in texk/tetex/ChangeLog.

2011-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-lib-version.m4 (new): Split FOO_version into FOO_major,
	FOO_minor, and FOO_micro; build FOO_LT_VERSINFO.

2011-07-12  Peter Breitenlohner  <peb@mppmu.mpg.de>
